-bug#0001345: Overwriting $snmp_index in query_snmp_host() breaks SNMP Data query if using get method
-bug#0001346: Strip out noisy 'No Such Instance currently exists at this OID' 
-bug#0001404: timeout in "function ping_icmp" (lib/ping.php)
-bug#0001405: Spaces in DS when .rrd file is created, so it fails
-bug#0001407: Place graph thumbnail into div to lower page length changes on load graphs
-bug#0001411: Graph Search Trouble with Cacti 8.7d 
-bug#0001413: strip_quotes fails 
-bug#0001426: multiple form opening due to bug in draw_edit_form() 
-bug#0001436: CSV Export Start Date and End Date are always 1970-01-01 01:00:00 
-bug#0001443: format_snmp_string can return a number with a leading space 
-bug#0001446: Wrong dates override in CSV export 
-bug#0001456: oid_uptime is not parsed correctly 
-bug#0001460: Skiping input parameters in data_query_field_list() may lead to SQL errors
-bug#0001464: Typo in install/index.php 
-bug#0001467: Customisable oid index parse regexp for weird MIBs
-bug#0001468: Tree is not expanded correctly
-bug#0001469: Tree is not being expanded if user followed link outside of cacti
-bug#0001476: Mark stacked columns in rrdtool_function_xport() output 
-bug#0001477: Spelling error in a variable in html_tree.php
-bug#0001478: Combo boxes on Graph Management page produce URLs with leading spaces
-bug: Top Graph Header Breaks When Plugins Used
-bug: SNMP v3 Password issue caused by Firefox's Password AutoFill
-bug: Strip Quotes does not properly handle the value 'U'

0.8.7d
-bug#0001336: Allow to specify on_change handler for checkbox_group
-bug#0001338: When Using Web Basic Authentication HTML Bookmarks Do Not Work 
-bug#0001388: Spine uses illegal flag for ping on Mac OS X 
-bug#0001351: Deleting 1000 graphs along with their Data Sources crashes the Server
-bug#0001361: SNMP query: 'No more variables left in this MIB View' instead of value of input field 