@@ -13,6 +13,7 @@ Cacti CHANGELOG
 -bug#0001404: timeout in "function ping_icmp" (lib/ping.php)
 -bug#0001405: Spaces in DS when .rrd file is created, so it fails
 -bug#0001407: Place graph thumbnail into div to lower page length changes on load graphs
+-bug#0001410: Thumbnail Columns is not honored for host display with snmp index group style
 -bug#0001411: Graph Search Trouble with Cacti 8.7d 
 -bug#0001413: strip_quotes fails 
 -bug#0001426: multiple form opening due to bug in draw_edit_form()
